# estrutura-workshop

./: .gitignore  README.md  pyproject.toml
app/: main.py
app/pipeline/: extract.py  load.py  transform.py
data/output/: dados.xlsx
docs/: index.md
test/: test_pipeline.py
